successfully integrated express with bootstrap and less

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,8 +1,7 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@testcolur: #ff3366;
+
+h1 {
+	background-color: @testcolur;
 }
 
-a {
-  color: #00B7FF;
-}
+ 
