--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,15 +7,15 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   </head> 
-  <body>
+  <body class="container-fluid">
       <h1>The Food App</h1>
       <h2>EatApp</h2>
-      <div class="container-fluid">    
+      <div>    
     	  <div class="row">
-    		  <div class="col-xs-12 col-md-4">EatApp Login</div>
-    		  <div class="col-xs-12 col-md-4">EatApp Register</div>
-    		  <div class="col-xs-12 col-md-4">Workout App</div>
-    	  </div>
+    		  <div class="col-xs-12 col-md-2">EatApp Login</div>
+    		  <div class="col-xs-12 col-md-2">EatApp Register</div>
+    		  <div class="col-xs-12 col-md-2" >Workout App</div>
+    	  <class="col-md-offset-6"/div>
       </div>	    
   </body>
 </html>
