--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,13 +9,16 @@
   </head> 
   <body class="container-fluid">
       <h1>The Food App</h1>
-      <h2>EatApp</h2>
+      <h2>NuColo</h2>
       <div>    
     	  <div class="row">
-    		  <div class="col-xs-12 col-md-2">EatApp Login</div>
-    		  <div class="col-xs-12 col-md-2">EatApp Register</div>
-    		  <div class="col-xs-12 col-md-2" >Workout App</div>
+    		  <div class="col-xs-12 col-md-2">NuColo Login</div>
+    		  <div class="col-xs-12 col-md-2">NuColo Register</div>
+    		  <div class="col-xs-12 col-md-2" >Workouts</div>
     	  <class="col-md-offset-6"/div>
-      </div>	    
+      </div>
+      <div class="col-lg-12">
+      <h1>Here's hoping..</h1>
+      </div>    
   </body>
 </html>
