--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,14 @@
     		  <div class="col-xs-12 col-md-2">NuColo Login</div>
     		  <div class="col-xs-12 col-md-2">NuColo Register</div>
     		  <div class="col-xs-12 col-md-2" >Workouts</div>
-    	  <class="col-md-offset-6"/div>
+    	  </div>
       </div>
       <div class="col-lg-12">
       <h1>Here's hoping..</h1>
+      <p><%= description %></p>
+      <% for (var i = 0; i< data.length; i++) { %>
+       <li><%= data[i].food_name %></li>
+      <% } %>
       </div>    
   </body>
 </html>
