--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,9 +20,14 @@
       <div class="col-lg-12">
       <h1>Here's hoping..</h1>
       <p><%= description %></p>
-      <% for (var i = 0; i< data.length; i++) { %>
-       <li><%= data[i].food_name %></li>
-      <% } %>
+      <table>
+          <th>Name of Food</th>
+        <tr>
+        <% for (var i = 0; i< data.length; i++) { %>
+        <%= data[i].food_name %>
+        <% } %>
+        </tr>
+      </table>
       </div>    
   </body>
 </html>
