--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     	  </div>
       </div>
       <div class="col-lg-12">
-      <h1>Here's hoping..</h1>
+      <h1>Main e-fridge</h1>
       <p><%= description %></p>
       <table>
       <tr>
@@ -34,6 +34,12 @@
         <% for (var i = 0; i< data.length; i++) { %>
       <tr>
           <td><%= data[i].food_name %></td>
+          <td><%= data[i].brand %></td>
+          <td><%= data[i].serving_size %></td>
+          <td><%= data[i].total_calories %></td>
+          <td><%= data[i].fat_grams %></td>
+          <td><%= data[i].carbohydrate_grams %></td>
+          <td><%= data[i].total_grams %></td>
       </tr>
         <% } %>
       </table>
