added ommitted protein column data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,7 @@
           <td><%= data[i].total_calories %></td>
           <td><%= data[i].fat_grams %></td>
           <td><%= data[i].carbohydrate_grams %></td>
+          <td><%= data[i].protein_grams %></td>
           <td><%= data[i].total_grams %></td>
       </tr>
         <% } %>
