--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,9 @@
       <h1>The Food App</h1>
       <h2>NuColo</h2>
-      <div>    
+      <div class="container-fluid">    
     	  <div class="row">
-    		  <div class="col-xs-12 col-md-2">NuColo Login</div>
-    		  <div class="col-xs-12 col-md-2">NuColo Register</div>
-    		  <div class="col-xs-12 col-md-2" >Workouts</div>
+    		 <a class="btn btn-default" href="#" role="button">Login</a>
+    		 <a class="btn btn-default" href="#" role="button">Register</a>
+    		 <a class="btn btn-default" href="#" role="button">Workouts</a>
     	  </div>
       </div>
