--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,15 @@
   <body class="container-fluid">
 
       <div>
-      <h1>Main e-Fridge</h1>
+      <h1>My Kitchen</h1>
+       <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search my e-Fridge">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+       </form>
       <p><%= description %></p>
-      <table class="table">
+      <table class="table hidden">
       <tr>
           <th>Name of Food</th>
           <th>Brand Name</th>
@@ -35,6 +41,7 @@
       </tr>
         <% } %>
       </table>
-      </div>    
+      </div>
+      <script src="../javascripts/showtables.js"></script>    
   </body>
 </html>
