--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,12 @@
       <h1>My Kitchen</h1>
        <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search my e-Fridge">
+          <input id="userSearch" type="text" class="form-control" placeholder="Search my e-Fridge">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default" id="response">Submit</button>
        </form>
       <p><%= description %></p>
-      <table class="table hidden">
+      <table class="table">
       <tr>
           <th>Name of Food</th>
           <th>Brand Name</th>
