--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-h1{background-color:#808080}
+h1{background-color:cream}.jumbotron{position:relative;background:#000 url("../images/avocado.png") center center;width:100%;height:100%;background-size:cover;overflow:hidden}
