--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,7 +1,14 @@
-@testcolur: grey;
+@testcolur: cream;
 
 h1 {
 	background-color: @testcolur;
 }
 
- 
+.jumbotron {
+    position: relative;
+    background: #000 url("../images/avocado.png") center center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+} 
