--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,14 +9,20 @@
   <body class="container-fluid">
 
       <div>
-      <h1>My Kitchen</h1>
-       <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input id="userSearch" type="text" class="form-control" placeholder="Search my e-Fridge">
-        </div>
-        <button type="submit" class="btn btn-default" id="response">Submit</button>
-       </form>
-      <p><%= description %></p>
+      <div class="jumbotron">
+        <div class="container">
+          <h1>My Kitchen</h1>
+        </div>  
+      </div>
+      <div class="well">
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input id="userSearch" type="text" class="form-control" placeholder="Search my e-Fridge">
+          </div>
+          <button type="submit" class="btn btn-default" id="response">Submit</button>
+        </form>
+       <p><strong><%= description %></strong></p>
+      </div>
       <table class="table">
       <tr>
           <th>Name of Food</th>
