--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,14 +1,21 @@
-@testcolur: cream;
+@testcolor: white;
+@testcolor2: #c0cfc4;
 
-h1 {
-	background-color: @testcolur;
+body {
+	background-color: @testcolor;
+}
+
+.well {
+	background-color: @testcolor2;
 }
 
 .jumbotron {
     position: relative;
-    background: #000 url("../images/avocado.png") center center;
+    background: @testcolor2 url("../images/avocado.png") center center;
     width: 100%;
     height: 100%;
     background-size: cover;
     overflow: hidden;
 } 
+
+
