--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-static-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -14,8 +14,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="./login">Login</a></li>
+        <li class="active"><a href="./">Home <span class="sr-only">(current)</span></a></li>
+         <form class="navbar-form navbar-left" role="button">
+           <div class="form-group">
+             <input id="userName" type="text" class="form-control" placeholder="Username">
+             <input id="userPass" type="text" class="form-control" placeholder="Password">
+           </div>
+           <button type="submit" class="btn btn-default" id="response">Login</button>
+         </form>        
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My e-fridge <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -25,16 +31,10 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">Create/Save Meals</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Reports</a></li>
+            <li><a href="./my_efridge">e-fridge: Main</a></li>
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">About</a></li>
         <li class="dropdown">
