--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <header>
     <% include ./partials/header %>                
   </header>
-  <body class="container-fluid">
+  <body class="container-fluid" class="col-md-12">
 
       <div>
       <div class="jumbotron">
