--- a/views/my_efridge.ejs
+++ b/views/my_efridge.ejs
@@ -6,7 +6,7 @@
   <header>
     <% include ./partials/header %>                
   </header>
-  <body class="container-fluid">
+  <body class="container-fluid" class="col-md-12">
 
       <div>
       <div class="jumbotron">
@@ -23,8 +23,9 @@
         </form>
        <p><strong><%= description %></strong></p>
       </div>
-      <table class="table table-bordered well">
-      <tr>
+      <div class="well">
+      <table class="table table-bordered table-hover">
+      <tr class="table_header">
           <th>Name of Food</th>
           <th>Brand Name</th>
           <th>Serving Size</th>
