--- a/views/my_efridge.ejs
+++ b/views/my_efridge.ejs
@@ -19,12 +19,17 @@
           <div class="form-group">
             <input id="userSearch" type="text" class="form-control" placeholder="Search my e-Fridge">
           </div>
-          <button type="submit" class="btn btn-default" id="response">Submit</button>
+          <button type="submit" class="btn btn-default">Submit</button>
         </form>
        <p><strong><%= description %></strong></p>
       </div>
       <div class="well">
-      <table class="table table-bordered table-hover">
+          <button href="#" type="submit" class="btn btn-default" id="btntest1">Create Meal</button>
+          <button href="#" type="submit" class="btn btn-default" id="btntest2">Modify Foods</button>
+          <button href="#" type="submit" class="btn btn-default" id="btntest3">Database</button>
+      </div>
+      <div class="well">
+      <table id="testtable" class="table table-bordered table-hover">
       <tr class="table_header">
           <th>Name of Food</th>
           <th>Brand Name</th>
@@ -49,6 +54,6 @@
         <% } %>
       </table>
       </div>
-      <script src="../javascripts/showtables.js"></script>    
+       <script src="javascripts/nav.js"></script>     
   </body>
 </html>
