--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My e-fridge <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Add food to e-fridge</a></li>
+            <li><a href="./login">login test</a></li>
             <li><a href="#">Modify e-fridge foods</a></li>
             <li><a href="#">...something</a></li>
             <li role="separator" class="divider"></li>
