test javascript functionality client side. Successfully removed hidden class from table using routing module, but stripped other css classes

--- a/views/my_efridge.ejs
+++ b/views/my_efridge.ejs
@@ -29,7 +29,7 @@
           <button href="#" type="submit" class="btn btn-default" id="btntest3">Database</button>
       </div>
       <div class="well">
-      <table id="testtable" class="table table-bordered table-hover">
+      <table id="testtable" class="table table-bordered table-hover testhide">
       <tr class="table_header">
           <th>Name of Food</th>
           <th>Brand Name</th>
@@ -53,7 +53,6 @@
       </tr>
         <% } %>
       </table>
-      </div>
-       <script src="javascripts/nav.js"></script>     
+      </div>    
   </body>
 </html>
