--- a/views/my_efridge.ejs
+++ b/views/my_efridge.ejs
@@ -29,7 +29,7 @@
           <button href="#" type="submit" class="btn btn-default" id="btntest3">Database</button>
       </div>
       <div class="well">
-      <table id="testtable" class="table table-bordered table-hover testhide">
+      <table id="testtable" class="table table-bordered table-hover" class="hidden">
       <tr class="table_header">
           <th>Name of Food</th>
           <th>Brand Name</th>
