--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,5 +1,5 @@
 @backgroundColor: white;
-@cont_color: #c0cfc4;
+@contain_color: #c0cfc4;
 @tablecolor: #efefc8;
 
 /**********************************************
@@ -10,7 +10,47 @@ body {
 }
 
 .well {
-	background-color: @cont_color;
+	background-color: @contain_color;
+}
+
+/**********************************************
+					Nav Bar
+**********************************************/
+.navbar-default {
+    background-color: @contain_color;
+    border-color: #E7E7E7;
+}
+
+.navbar-default .navbar-nav > .active > a, 
+.navbar-default .navbar-nav > .active > a:hover, 
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #green;
+    background-color: @contain_color;
+}
+
+/**********************************************
+					Buttons 
+**********************************************/
+.btn:active {
+	background-color: @tablecolor;
+}
+.btn {
+	background-color: @backgroundColor;
+}
+.btn:hover, 
+.btn:focus {
+	background-color: @tablecolor;
+}
+
+#foodSubmit,
+#registerSubmit {
+	border: 2px solid @contain_color;
+}
+
+#foodSubmit:hover
+#registerSubmit:hover {
+	background-color: @contain_color;
+	border: 2px solid black;
 }
 
 /**********************************************
@@ -19,7 +59,7 @@ body {
 
 .jumbotron {
     position: relative;
-    background: @cont_color url("../images/avocado.png") center center;
+    background: @contain_color url("../images/avocado.png") center center;
     background-attachent: fixed;
     width: 100%;
     height: 100%;
@@ -32,22 +72,54 @@ body {
 **********************************************/
 
 tbody {
-	background-color: @tablecolor;
-	border: 2px solid @backgroundColor;
+	background-color: @backgroundColor;
 }
 
 .table_header {
-	border: 2px solid @tablecolor;
+	backgroundcolor: @backgroundColor;
 }
 
-tr:nth-child(odd) {
-	background-color: @backgroundColor;
+tr {
+	border: 5px solid @tablecolor;
+}
+tr:nth-child(even) {
+	background-color: @contain_color;
 
+}
+
+//had to override/append 'td' for this css to work
+tr:hover td{
+	background-color: @tablecolor;
 }
 
 .testhide {
 	display: none;
 }
 
+/**********************************************
+			General Form Input Styles 
+**********************************************/
 
+
+.textInput {
+	width: 50%;
+}
+
+.numInput {
+	width: 25%;
+}
+
+/**********************************************
+	Form to create food profile 
+**********************************************/
+
+#foodForm,
+#registerForm {
+	background-color: @tablecolor;
+	padding: 15px;
+}
+
+div.row {
+	padding: 5px;
+}
 
