--- a/views/partials/food_table.ejs
+++ b/views/partials/food_table.ejs
@@ -1,4 +1,4 @@
-      <div id="testtable" class="well" hidden>
+      <div id="foodData" class="well" hidden>
       <table class="table table-bordered table-hover">
       <tr class="table_header">
           <th>Name of Food</th>
