added javascript and route for workout entry form and database tble

--- a/views/partials/exercise_table.ejs
+++ b/views/partials/exercise_table.ejs
@@ -1,4 +1,4 @@
-     <div id="workoutData" class="well">
+     <div id="workoutData" class="well" hidden>
       <table class="table table-bordered table-hover">
       <tr class="table_header">
           <th>Date</th>
