moved workouts to /index to help correct errors. 3rd main ejs or incorporate workouts into /my_etools.ejs. 3rd main ejs or incorporate workouts into /my_etools.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,8 @@
           <h1>My Kitchen</h1>
         </div>  
       </div>
-      </div>   
+      </div>  
+        <% include ./partials/exercise_table.ejs %> 
+      <script src="./javascripts/bundle.js"></script>
   </body>
 </html>
