--- a/views/partials/foodform.ejs
+++ b/views/partials/foodform.ejs
@@ -4,55 +4,55 @@
 		<div class="form-group row">
     	 <label for="food_name" class="col-sm-2 form-control-label">Food Name</label>
     		<div class="col-sm-10">
-       		 <input type="text" class="form-control textInput" id="food_name" placeholder="Enter name of food here. E.g. 'Avocado, small'"></input>
+       		 <input type="text" class="form-control textInput" name="food_name" id="food_name" placeholder="Enter name of food here. E.g. 'Avocado, small'"></input>
     		</div>
 		</div>
 		<div class="form-group row">
     	 <label for="brand" class="col-sm-2 form-control-label">Brand</label>
     		<div class="col-sm-10">
-       		 <input type="text" class="form-control textInput" id="brand" placeholder="Enter the food's brand name (optional)."></input>
+       		 <input type="text" class="form-control textInput" id="brand" name="brand" placeholder="Enter the food's brand name (optional)."></input>
     		</div>
 		</div>
 		<div class="form-group row">
     	 <label for="serving_size" class="col-sm-2 form-control-label">Serving Size</label>
     		<div class="col-sm-10">
     		<span>Enter the serving size E.g. 1 or 2.5.</span>
-       		 <input type="number" class="form-control numInput" id="serving_size" placeholder="0"></input>
+       		 <input type="number" class="form-control numInput" name="serving_size" id="serving_size" placeholder="0"></input>
     		</div>
 		</div>
 		<div class="form-group row">
     	 <label for="total_calories" class="col-sm-2 form-control-label">Total Calories</label>
     		<div class="col-sm-10">
     		<span>Enter the total calories..</span>
-       		 <input type="number" class="form-control numInput" id="total_calories" placeholder="0"></input>
+       		 <input type="number" class="form-control numInput" name="total_calories" id="total_calories" placeholder="0"></input>
     		</div>
 		</div>
 		<div class="form-group row">
     	 <label for="fat_grams" class="col-sm-2 form-control-label">Fat(g)</label>
     		<div class="col-sm-10">
     		<span>Enter the total fat grams.</span>
-       		 <input type="number" class="form-control numInput" id="fat_grams" placeholder="0"></input>
+       		 <input type="number" class="form-control numInput" name="fat_grams" id="fat_grams" placeholder="0"></input>
     		</div>
 		</div>
 		<div class="form-group row">
     	 <label for="carbohydrate_grams" class="col-sm-2 form-control-label">Carbohydrate(g)</label>
     		<div class="col-sm-10">
     		<span>Enter the total carbohydrate grams.</span>
-       		 <input type="number" class="form-control numInput" id="carbohydrate_grams" placeholder="0"></input>
+       		 <input type="number" class="form-control numInput" name="carbohydrate_grams" id="carbohydrate_grams" placeholder="0"></input>
     		</div>
 		</div>
 		<div class="form-group row">
     	 <label for="protein_grams" class="col-sm-2 form-control-label">Protein(g)</label>
     		<div class="col-sm-10">
     		<span>Enter the total protein grams.</span>
-       		 <input type="number" class="form-control numInput" id="protein_grams" placeholder="0"></input>
+       		 <input type="number" class="form-control numInput" name="protein_grams" id="protein_grams" placeholder="0"></input>
     		</div>
 		</div>
 		<div class="form-group row">
     	 <label for="total_grams" class="col-sm-2 form-control-label">Total Macros(g)</label>
     		<div class="col-sm-10">
     		<span>Enter the total macro grams.</span>
-       		 <input type="number" class="form-control numInput" id="protein_grams" placeholder="0"></input>
+       		 <input type="number" class="form-control numInput" name="total_grams" id="protein_grams" placeholder="0"></input>
     		</div>
 		</div>
 		<div class="form-group row">
