separeted routes and main views into three separate files until I learn more about mysql connection pools, and effective routing

--- a/views/efridge.ejs
+++ b/views/efridge.ejs
@@ -29,8 +29,6 @@
       </div>
        <% include ./partials/food_table.ejs %>
        <% include ./partials/foodform.ejs %>
-       <% include ./partials/register.ejs %>
-       <% include ./partials/exercise.js %>
-       <script src="./javascripts/bundle.js"></script>
+      <script type="text/javascript" src="./javascripts/bundle2.js"></script>
   </body>
 </html>
