--- a/views/egym.ejs
+++ b/views/egym.ejs
@@ -11,15 +11,15 @@
       <div>
       <div class="jumbotron">
         <div class="container">
-          <h1>Colorado e-tools</h1>
-          <h2>for Health</h2>
+          <h1>My e-gym</h1>
         </div>  
       </div>
       </div> 
       <div class="well">
-           <button type="button" class="btn btn-default" id="btntest4">Register</button> 
+        <button type="button" class="btn btn-default" id="btntest5">Workouts</button> 
       </div>
-        <% include ./partials/register.ejs %> 
-      <script type="text/javascript" src="./javascripts/bundle.js"></script>
+        <% include ./partials/exercise_table.ejs %> 
+        <% include ./partials/exercise.ejs %>
+      <script type="text/javascript" src="./javascripts/bundle3.js"></script>
   </body>
 </html>
