--- a/views/partials/exercise.ejs
+++ b/views/partials/exercise.ejs
@@ -1,5 +1,5 @@
 <div class="well" id="exerciseEntry" hidden>
-	<form action="/exEntry" method="post" id="registerForm">
+	<form action="/egym" method="post" id="registerForm">
 	<h2>Good job on your workout! Create a workout entry and track your progress</h2>
 		<div class="form-group row">
     	 <label for="userFirstName" class="col-sm-2 form-control-label">First Name</label>
