--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -1,5 +1,5 @@
 <div class="well" id="registerDiv" hidden>
-	<form action="" method="post" id="registerForm">
+	<form action="/register" method="post" id="registerForm">
 	<h2>Please enter the requested information as accurately as possible</h2>
 		<div class="form-group row">
     	 <label for="userFirstName" class="col-sm-2 form-control-label">First Name</label>
