--- a/views/partials/foodform.ejs
+++ b/views/partials/foodform.ejs
@@ -1,5 +1,5 @@
 <div class="well" id="foodProfile" hidden>
-	<form action="" method="post" id="foodForm">
+	<form action="/efridge" method="post" id="foodForm">
 	<h2>Create a new food profile</h2>
 		<div class="form-group row">
     	 <label for="food_name" class="col-sm-2 form-control-label">Food Name</label>
@@ -10,14 +10,14 @@
 		<div class="form-group row">
     	 <label for="brand" class="col-sm-2 form-control-label">Brand</label>
     		<div class="col-sm-10">
-       		 <input type="text" class="form-control textInput" id="brand" name="brand" placeholder="Enter the food's brand name (optional)."></input>
+       		 <input type="text" class="form-control textInput" id="brand" name="brand" placeholder="--"></input>
     		</div>
 		</div>
 		<div class="form-group row">
     	 <label for="serving_size" class="col-sm-2 form-control-label">Serving Size</label>
     		<div class="col-sm-10">
     		<span>Enter the serving size E.g. 1 or 2.5.</span>
-       		 <input type="number" class="form-control numInput" name="serving_size" id="serving_size" placeholder="0"></input>
+       		 <input type="text" class="form-control numInput" name="serving_size" id="serving_size" placeholder="0"></input>
     		</div>
 		</div>
 		<div class="form-group row">
@@ -52,7 +52,7 @@
     	 <label for="total_grams" class="col-sm-2 form-control-label">Total Macros(g)</label>
     		<div class="col-sm-10">
     		<span>Enter the total macro grams.</span>
-       		 <input type="number" class="form-control numInput" name="total_grams" id="protein_grams" placeholder="0"></input>
+       		 <input type="number" class="form-control numInput" name="total_grams" id="total_grams" placeholder="0"></input>
     		</div>
 		</div>
 		<div class="form-group row">
