--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">NuColo</a>
+      <a class="navbar-brand" href="#">MyColo</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -21,17 +21,15 @@
              <input id="userPass" type="text" class="form-control" placeholder="Password">
            </div>
            <button type="submit" class="btn btn-default" id="response">Login</button>
-           <button type="button" class="btn btn-default" id="btntest4">Register</button>
          </form>  
          <form class="navbar-form navbar-left">
-          <button type="button" class="btn btn-default" id="btntest5">Workouts</button>
          </form> 
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown"> 
            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> My e-tools <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li id="fridge"><a href="./my_etools">My e-fridge</a></li>
-                <li id="fridge"><a href="./my_etools">My e-gym</a></li>
+                <li id="fridge"><a href="./efridge">My e-fridge</a></li>
+                <li id="gym"><a href="./egym">My e-gym</a></li>
               </ul>
             </li>
           </ul>
@@ -42,7 +40,6 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">About</a></li>
-              <li><a href="#">tracking workout website</a></li>
               <li><a href="#">Decent free calcs/info</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Gov nutrition resources</a></li>
