--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -24,8 +24,8 @@ body {
 .navbar-default .navbar-nav > .active > a, 
 .navbar-default .navbar-nav > .active > a:hover, 
 .navbar-default .navbar-nav > .active > a:focus {
-    color: #green;
-    background-color: @contain_color;
+    color: black;
+    background-color: @tablecolor;
 }
 
 /**********************************************
