--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
          <form class="navbar-form navbar-left">
          </form> 
         <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown"> 
+          <li class="dropdown" id="etools"> 
            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> My e-tools <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li id="fridge"><a href="./efridge">My e-fridge</a></li>
