--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -8,7 +8,7 @@
     		</div>
 		</div>
 		<div class="form-group row">
-    	 <label for="userLastName" class="col-sm-2 form-control-label">Brand</label>
+    	 <label for="userLastName" class="col-sm-2 form-control-label">Last Name</label>
     		<div class="col-sm-10">
        		 <input type="text" class="form-control textInput" id="userLastName"></input>
     		</div>
