--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -10,14 +10,37 @@ body {
 }
 
 .well {
-	background-color: @contain_color;
+	background-color: @backgroundColor;
 }
+body {
+    background-image: url("../images/healthy.jpg");
+    height: 100vh;
+    background-size: cover;
+
+} 
+
+/*******************************************************
+header {
+	background-image: url(../img/Gym_wiki.jpg);
+	height: 100vh;
+	background-size: cover;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+*****************************************************/
+
+
+
+
+
 
 /**********************************************
 					Nav Bar
 **********************************************/
 .navbar-default {
-    background-color: @contain_color;
+    background-color: @backgroundColor;
     border-color: #E7E7E7;
 }
 
@@ -59,7 +82,7 @@ body {
 
 .jumbotron {
     position: relative;
-    background: @contain_color url("../images/avocado.png") center center;
+    background: @backgroundColor url("../images/avocado.png") center center;
     background-attachent: fixed;
     width: 100%;
     height: 100%;
