added background image and changed well jumbotron and nav css

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -10,7 +10,7 @@ body {
 }
 
 .well {
-	background-color: @backgroundColor;
+	background-color: rgba(255,255,255,0.4);
 }
 body {
     background-image: url("../images/healthy.jpg");
@@ -40,7 +40,7 @@ header {
 					Nav Bar
 **********************************************/
 .navbar-default {
-    background-color: @backgroundColor;
+    background-color: rgba(255,255,255,0.4);
     border-color: #E7E7E7;
 }
 
@@ -82,7 +82,8 @@ header {
 
 .jumbotron {
     position: relative;
-    background: @backgroundColor url("../images/avocado.png") center center;
+/**    background: url("../images/avocado.png") center center;**/
+    background-color: rgba(255,255,255,0.4);
     background-attachent: fixed;
     width: 100%;
     height: 100%;
