--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,12 +1,12 @@
 @backgroundColor: white;
-@contain_color: #c0cfc4;
-@tablecolor: #efefc8;
+@contain_color: #efefc8;
+@tablecolor: #6A877B;
 
 /**********************************************
 				General Styles
 **********************************************/
 body {
-	background-color: @backgroundColor;
+	background-color: @tablecolor;
 }
 
 .well {
@@ -18,23 +18,6 @@ body {
     background-size: cover;
 
 } 
-
-/*******************************************************
-header {
-	background-image: url(../img/Gym_wiki.jpg);
-	height: 100vh;
-	background-size: cover;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-*****************************************************/
-
-
-
-
-
 
 /**********************************************
 					Nav Bar
@@ -99,8 +82,13 @@ tbody {
 	background-color: @backgroundColor;
 }
 
+th {
+	text-align: center;
+}
+
 tr {
 	border: 5px solid @tablecolor;
+	text-align: center;
 }
 tr:nth-child(even) {
 	background-color: @contain_color;
