updated .gitignore, saving eds from previous day

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,6 +1,11 @@
+
+//LESS variables
+
 @backgroundColor: white;
 @contain_color: #efefc8;
 @tablecolor: #6A877B;
+
+//MIXINS
 
 /**********************************************
 				General Styles
@@ -57,6 +62,12 @@ body {
 #registerSubmit:hover {
 	background-color: @contain_color;
 	border: 2px solid black;
+}
+
+#btntest4.btn,
+#btntest4.btn-default {
+	width: 15%;
+	height: 15%;
 }
 
 /**********************************************
