--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         </div>  
       </div>
       </div> 
-      <div class="well">
+      <div class="well container-fluid">
            <button type="button" class="btn btn-default" id="btntest4">Register</button> 
       </div>
         <% include ./partials/register.ejs %> 
