edited less variable names, website color scheme and related additions

--- a/views/efridge.ejs
+++ b/views/efridge.ejs
@@ -24,8 +24,8 @@
        <p><strong><%= description %></strong></p>
       </div>
       <div class="well">
-          <button type="button" class="btn btn-default" id="btntest1">Create Food</button>
-          <button type="button" class="btn btn-default" id="btntest3">Database</button>
+          <button type="button" class="btn btn-lg btn-primary" id="btntest1">Create Food</button>
+          <button type="button" class="btn btn-lg btn-secondary" id="btntest3">Database</button>
       </div>
        <% include ./partials/food_table.ejs %>
        <% include ./partials/foodform.ejs %>
