--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
       </div>
       </div> 
       <div class="well container-fluid">
-           <button type="button" class="btn btn-default" id="btntest4">Register</button> 
+           <button type="button" class="btn btn-lg" id="btntest4">Register</button> 
       </div>
         <% include ./partials/register.ejs %> 
       <script type="text/javascript" src="./javascripts/bundle.js"></script>
