--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li id="home"><a href="./auth">Home</a></li>
+        <li id="home"><a href="./">Home</a></li>
          <form class="navbar-form navbar-left">
            <div class="form-group">
              <input id="userName" type="text" class="form-control" placeholder="Username">
