--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -1,4 +1,4 @@
-<div class="well" id="registerDiv" hidden>
+<div class="well container-fluid" id="registerDiv" hidden>
 	<form action="/register" method="post" id="registerForm">
 	<h2>Please enter the requested information as accurately as possible</h2>
 		<div class="form-group row">
