--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,24 +1,26 @@
 
 //LESS variables
 
-@backgroundColor: white;
-@contain_color: #efefc8;
-@tablecolor: #6A877B;
+@plainColor: white;
+@prime_color: #efefc8;
+@main_color: #6a877b;
+@translucent: rgba(239,239,239,0.3);
+@accent_color: #7f4659;
 
-//MIXINS
+//MIXINS [coming in future progression]
 
 /**********************************************
 				General Styles
 **********************************************/
-body {
-	background-color: @tablecolor;
-}
 
 .well {
-	background-color: rgba(255,255,255,0.4);
+	background-color: @translucent;
 }
+
 body {
     background-image: url("../images/healthy.jpg");
+    background-attachent: fixed;
+    z-index: -3;
     height: 100vh;
     background-size: cover;
 
@@ -28,46 +30,53 @@ body {
 					Nav Bar
 **********************************************/
 .navbar-default {
-    background-color: rgba(255,255,255,0.4);
-    border-color: #E7E7E7;
+    background-color: @translucent;
 }
 
 .navbar-default .navbar-nav > .active > a, 
 .navbar-default .navbar-nav > .active > a:hover, 
 .navbar-default .navbar-nav > .active > a:focus {
-    color: black;
-    background-color: @tablecolor;
+    color: green;
+    background-color: @main_color;
+
+}
+#userName:focus,
+#userPass:focus {
+border: 2px solid @accent_color;
+
 }
 
 /**********************************************
 					Buttons 
 **********************************************/
-.btn:active {
-	background-color: @tablecolor;
-}
+
 .btn {
-	background-color: @backgroundColor;
+	background-color: @prime_color;
+	color: black;
 }
-.btn:hover, 
-.btn:focus {
-	background-color: @tablecolor;
+
+.btn:active,
+.btn-lg:active,
+.btn-primary:active,
+.btn:focus,
+.btn:hover {
+	background-color: @accent_color;
+}
+
+
+.btn:hover {
+	border: 2px solid @prime_color;
 }
 
 #foodSubmit,
 #registerSubmit {
-	border: 2px solid @contain_color;
+	border: 2px solid @accent_color;
 }
 
 #foodSubmit:hover
 #registerSubmit:hover {
-	background-color: @contain_color;
-	border: 2px solid black;
-}
-
-#btntest4.btn,
-#btntest4.btn-default {
-	width: 15%;
-	height: 15%;
+	background-color: @main_color;
+	border: 2px solid @accent_color;
 }
 
 /**********************************************
@@ -76,8 +85,9 @@ body {
 
 .jumbotron {
     position: relative;
+    z-index: 3;
 /**    background: url("../images/avocado.png") center center;**/
-    background-color: rgba(255,255,255,0.4);
+    background-color: @translucent;
     background-attachent: fixed;
     width: 100%;
     height: 100%;
@@ -90,7 +100,7 @@ body {
 **********************************************/
 
 tbody {
-	background-color: @backgroundColor;
+	background-color: @plainColor;
 }
 
 th {
@@ -98,17 +108,17 @@ th {
 }
 
 tr {
-	border: 5px solid @tablecolor;
+	border: 5px solid @prime_color;
 	text-align: center;
 }
 tr:nth-child(even) {
-	background-color: @contain_color;
+	background-color: @main_color;
 
 }
 
 //had to override/append 'td' for this css to work
 tr:hover td{
-	background-color: @tablecolor;
+	background-color: @prime_color;
 }
 
 .testhide {
@@ -134,7 +144,7 @@ tr:hover td{
 
 #foodForm,
 #registerForm {
-	background-color: @tablecolor;
+	background-color: @prime_color;
 	padding: 15px;
 }
 
