removed button functionalty for database inserts. Installed nginx, reinstalled forever, redirected natashaosborne.com to droplet with nginx partition and including app

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -68,6 +68,12 @@ border: 2px solid @accent_color;
 	border: 2px solid @prime_color;
 }
 
+/**button disabled until authentication learned**/
+
+#foodSubmit {
+	display: none;
+}
+
 #foodSubmit,
 #registerSubmit {
 	border: 2px solid @accent_color;
