--- a/views/partials/foodform.ejs
+++ b/views/partials/foodform.ejs
@@ -57,7 +57,7 @@
 		</div>
 		<div class="form-group row">
     		<div class="col-sm-offset-2 col-sm-10">
-      			<button id="foodSubmit" type="submit" class="btn btn-secondary">Submit</button>
+      			<button id="foodSubmit" type="submit" class="btn btn-secondary" disabled>Submit</button>
    		    </div>
  	  </div>
   </form>
