--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -29,7 +29,7 @@
 		</div>
     <div class="form-group row">
         <div class="col-sm-offset-2 col-sm-10">
-            <button id="registerSubmit" type="submit" class="btn btn-secondary">Submit</button>
+            <button id="registerSubmit" type="submit" class="btn btn-secondary" disabled>Submit</button>
           </div>
     </div>
     </form>
