created mysql connection pool. Attempting solns to the js button problem

--- a/public/stylesheets/footer.less
+++ b/public/stylesheets/footer.less
@@ -1,9 +1,8 @@
-@footColor: #562583;
+@color: #562583;
 
 .well {
-	background-color: @footColor;
+  background-color: @color;
 }
 .page {
-	background-color: @footColor;
+  background-color: @color;
 }
-//end of footer test
