--- a/views/efridge.ejs
+++ b/views/efridge.ejs
@@ -29,6 +29,6 @@
       </div>
        <% include ./partials/food_table.ejs %>
        <% include ./partials/foodform.ejs %>
-      <script type="text/javascript" src="./javascripts/bundle2.js"></script>
+      <script type="text/javascript" src="./javascripts/bundle.js"></script>
   </body>
 </html>
