--- a/views/egym.ejs
+++ b/views/egym.ejs
@@ -20,6 +20,6 @@
       </div>
         <% include ./partials/exercise_table.ejs %> 
         <% include ./partials/exercise.ejs %>
-      <script type="text/javascript" src="./javascripts/bundle3.js"></script>
+      <script type="text/javascript" src="./javascripts/bundle.js"></script>
   </body>
 </html>
