attempted to merge the bundle, bundle2 & bundle2.js, reverted back to previous script setup

--- a/public/stylesheets/concat.less
+++ b/public/stylesheets/concat.less
@@ -34,6 +34,10 @@ body {
 
 } 
 
+.hideit {
+	display: none;
+}
+
 /**********************************************
 					Nav Bar
 **********************************************/
@@ -102,7 +106,6 @@ border: 2px solid @accent_color;
     z-index: 3;
 /**    background: url("../images/avocado.png") center center;**/
     background-color: @translucent;
-    background-attachent: fixed;
     width: 100%;
     height: 100%;
     background-size: cover;
