--- a/views/efridge.ejs
+++ b/views/efridge.ejs
@@ -27,8 +27,9 @@
           <button type="button" class="btn btn-lg btn-primary" id="btntest1">Create Food</button>
           <button type="button" class="btn btn-lg btn-secondary" id="btntest3">Database</button>
       </div>
+      <p id="pgctrl" class="hideit"><%= on_efridge = true; %></p>
        <% include ./partials/food_table.ejs %>
        <% include ./partials/foodform.ejs %>
-      <script type="text/javascript" src="./javascripts/bundle.js"></script>
+      <script type="text/javascript" src="./javascripts/bundle2.js"></script>
   </body>
 </html>
