--- a/views/egym.ejs
+++ b/views/egym.ejs
@@ -18,8 +18,9 @@
       <div class="well">
         <button type="button" class="btn btn-default" id="btntest5">Workouts</button> 
       </div>
+      <p id="pgctrl" class="hidden"><%= on_efridge = true; %></p>
         <% include ./partials/exercise_table.ejs %> 
         <% include ./partials/exercise.ejs %>
-      <script type="text/javascript" src="./javascripts/bundle.js"></script>
+      <script type="text/javascript" src="./javascripts/bundle3.js"></script>
   </body>
 </html>
