--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,9 @@
       <div class="well container-fluid">
            <button type="button" class="btn btn-lg" id="btntest4">Register</button> 
       </div>
-        <% include ./partials/register.ejs %> 
-      <script type="text/javascript" src="./javascripts/bundle.js"></script>
+      <p id="pgctrl"><%= on_index = true; %></p>
+              <% include ./partials/register.ejs %>
+            <script type="text/javascript" src="./javascripts/bundle.js"></script>
+ 
   </body>
 </html>
