--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -26,6 +26,10 @@ body {
 
 } 
 
+.hideit {
+	display: none;
+}
+
 /**********************************************
 					Nav Bar
 **********************************************/
@@ -94,7 +98,6 @@ border: 2px solid @accent_color;
     z-index: 3;
 /**    background: url("../images/avocado.png") center center;**/
     background-color: @translucent;
-    background-attachent: fixed;
     width: 100%;
     height: 100%;
     background-size: cover;
